# eternum

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .knip.json  .prettierignore  .tool-versions  AGENTS.md  AVATAR_SYSTEM_ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  MODDING.md  PERFORMANCE_REVIEW.md  PLAYER_PAGE_REFACTOR_PLAN.md  QuicklyBuild.md  README.md  SYNC-HARDENING.md  Scarb.toml  THREEJS_CRITICAL_ISSUES_REMAINING.md  THREEJS_MEMORY_OPTIMIZATIONS.md  bug-analysis.md  bun.lockb  checklist  claude.md  default.js  docker-compose.yml  dojo-language-server  donkeys.json  eslint.config.js  game.md  github-issues.md  label-preview.html  notes  optimisations.md  package-lock.json  package.json  performance-findings.md  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  (+9 more)
.claude/: CLAUDE.md  contracts-rules.md  frontend-rules.md  ralph-loop.local.md
.claude/agents/: game-ux-evaluator.md  three-js-for-video-games-expert.md
.claude/skills/: detect-memory-leaks.md  (+1 more)
.context/: lighting-ambient-prd.md
.github/: copilot-instructions.md
Dockers/: Dockerfile-lore-machine  lore-machine.sh
balancing/: README.md  package.json  tailwind.config.js
bot/: .gitignore  README.md  drizzle.config.ts  index.js  migrate.ts  package.json  tsconfig.json
bot/discord/: .gitignore  Cargo.toml
bot/discord/src/: constants.rs  eternum_enums.rs  utils.rs
bot/discord/src/actors/: discord_message_creator.rs  tick_sender.rs  torii_client_subscriber.rs
bot/discord/src/commands/: add_user.rs  get_user.rs  update_user.rs
bot/discord/src/events/: battle_claim.rs  battle_leave.rs  battle_pillage.rs  battle_start.rs  mod.rs
cheat/: README.md  bun.lockb
client/: .env  .env.development  .env.local.sample  .env.preview  .env.production  .env.sample  .gitattributes  .gitignore  .knip.json  .npmrc  .prettierignore  .prettierrc  CLEANUP_GUIDE.md  CODEBASE_ANALYSIS_SUMMARY.md  EMPIRE_ALTERNATIVE_APPROACHES.md  EMPIRE_INTEGRATION_EXAMPLE.md  EMPIRE_MANAGEMENT_IMPLEMENTATION.md  README.md  Realm-city-final.tsx  Realm-city_13.tsx  STORYBOOK_IMPLEMENTATION_PLAN.md  TemperateRainforest.tsx  TropicalRainforest.tsx  TropicalSeasonalForest.tsx  Tundra.tsx  bun.lockb  codegen.ts  dojoConfig.ts  env.ts  eslint.config.js  index.html  package.json  pwa-assets.config.ts  tailwind.config.js  test  tsconfig.json  tsconfig.node.json  update-policies.js  vite.config.ts  vite.config.ts.timestamp-1710688933093-a317697f6f5d2.mjs  (+3 more)
config/: .gitignore  EternumConfig.example.json  README.md  deploy-factory-world.ts  index.ts  package.json  speed.ts  tsconfig.json  tsup.config.ts
contracts/: .gitignore  .tool-versions  Dockerfile  README.md  Scarb.toml  dojo_dev.toml  dojo_prod.toml  manifest_dev.json  manifest_mainnet.json  manifest_prod.json  package.json  torii-sepolia.toml  torii.db-shm  torii.db-wal  torii.toml
deploy/: Makefile  README.md
discord-bot/: Cargo.toml  Secrets.toml.example
discord-bot/src/: eternum_enums.rs  events.rs  init.rs  main.rs  subscription.rs  types.rs  utils.rs
discord-bot/src/actors/: discord_message_sender.rs  mod.rs  parsed_event_processor.rs  tick_sender.rs  torii_client_subscriber.rs
discord-bot/src/events/: battle_claim.rs  battle_join.rs  battle_leave.rs  battle_pillage.rs  battle_start.rs  game_ended.rs  hyperstructure_finished.rs  hyperstructure_started.rs  mod.rs  settle_realm.rs
docs/: README.md  agora.md  faith-v2-tdd-plan.md  global-sql-queries.md  prd-coarse-default-tick-regression.md  prd-entry-route-and-network-switch-hardening.md  prd-factory-admin-impl-sequence.md  prd-loading-stall-recovery.md  prd-player-first-load-world-map.md  prd-referrals-mvp.md  prd-referrals.md  prd-worldmap-interactivity-readiness.md
eternum-docs/: README.md  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vocs.config.ts  vocs.config.ts.timestamp-1733675353135-d36e5bdf0e4c5.mjs
gg-xyz/: .env  .env.sample  package.json
landing/: .env  .env.preview  .env.production  .env.sample  .env.sepolia  codegen.ts  dojoConfig.ts  env.ts  index.html  package.json  schema.graphql  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vercel.json  vite.config.ts
observability/: README.md  docker-compose.yml  grafana-datasources.yaml  otel-collector-config.yaml  tempo-config.yaml
rust-bot/: .gitignore  Cargo.toml  Makefile.toml  Secrets.toml.example  Shuttle.toml  database.sqlite  database.sqlite-shm  database.sqlite-wal
rust-bot/migrations/: 20240818171830_create_users_table.sql
rust-bot/src/: constants.rs  events.rs  main.rs  types.rs
rust-bot/src/commands/: add_user.rs  get_user.rs  mod.rs  update_user.rs
scripts/: README-image-compression.md  README.md  analyze-images.js  client.sh  codemod-lucide-imports.mjs  compress-images-with-sharp.js  compress-images.js  contracts.sh  copy-abis.mjs  deploy.sh  dev-agents.mjs  extractPolicies.js  generate-realm-names.mjs  generate-weekly-summary.js  indexer.sh  install-axis.sh  install-onchain-agent.sh  note  prefactory-deploy.mjs  run-agent-system-smoke.mjs  set_admin_bank.sh  update_variables.sh
sdk/: .gitignore  bun.lockb  package.json  readme.md  tsup.config.ts
src/: Scarb.toml  alias.cairo  components.cairo  constants.cairo  interfaces.cairo  lib.cairo  systems.cairo  tests.cairo  utils.cairo
world/: Scarb.toml  dojo_dev.toml  dojo_prod.toml  manifest_prod.json
(+10484 files in other folders)
