[package]
name = "eternum-discord"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3"
anyhow = "1.0.66"
poise = { version = "0.6.1" }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
dotenvy = { version = "0.15.7", default-features = false }
envy = { version = "0.4.2", default-features = false }
eyre = {version = "0.6", default-features = false, features = ["auto-install"]}
toml = { version = "0.7", default-features = false, features = ["parse", "display"] }
starknet = "0.11.0"
starknet-crypto = "0.7.0"
starknet-types-core = "~0.1.4"
dojo-types = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.12" }
torii-client = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.12" }
torii-grpc = { git = "https://github.com/dojoengine/dojo", features = [
    "client",
], tag = "v1.0.0-alpha.12" }
torii-relay = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.12" }
dojo-world = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.12" }

cainome = { git = "https://github.com/cartridge-gg/cainome" }
cairo-lang-filesystem = "=2.7.0"
scarb = { git = "https://github.com/software-mansion/scarb", tag = "v2.7.0" }
shuttle-runtime = { version = "0.47.0" }
shuttle-serenity = { version = "0.47.0" }
shuttle-rocket = { version = "0.47.0" }
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.1"
tokio = "1.26.0"

[patch.crates-io]
# Remove this patch once the following PR is merged: <https://github.com/xJonathanLEI/starknet-rs/pull/615>
#
# To enable std feature on `starknet-types-core`.
# To re-export the entire `felt` module from `starknet-types-core`.
starknet-core = { git = "https://github.com/kariy/starknet-rs", branch = "dojo-patch" }
starknet-types-core = { git = "https://github.com/dojoengine/types-rs", rev = "289e2f0" }
