[package]
name = "e06_sample_bot_structure"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
poise = { version = "0.6.1" }                                             # remember to update the version on changes!

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12.2"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
