[package]
name = "eternum-discord"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2021"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3"
anyhow = "1.0.66"
poise = { version = "0.6.1" }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
dotenvy = { version = "0.15.7", default-features = false }
envy = { version = "0.4.2", default-features = false }
eyre = {version = "0.6", default-features = false, features = ["auto-install"]}
toml = { version = "0.7", default-features = false, features = ["parse", "display"] }
num_enum = "0.7.3"
strum_macros = "0.26.4"
starknet = "0.12.0"
starknet-crypto = "0.7.0"
starknet-types-core = "~0.1.4"
dojo-types = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.3" }
torii-client = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.3" }
torii-grpc = { git = "https://github.com/dojoengine/dojo", features = [
    "client",
], tag = "v1.0.3" }
torii-relay = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.3" }
dojo-world = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.3" }

cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.9", features = ["abigen-rs"] }
cainome-cairo-serde = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.9" }
cairo-lang-filesystem = "=2.8.4"
shuttle-runtime = { version = "0.49.0" }
shuttle-serenity = { version = "0.49.0" }
shuttle-rocket = { version = "0.49.0" }
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.2"
tokio = "1.26.0"
